# SynapseCortana

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md
.github/workflows/: release.yml
doc/: DISTRIBUCION.md  FASE1.md  FASE2.md  FASE3.md  MANUAL.md  OpenClaw.txt  SynapseCortana.md  Synapse_Cortana.docx  mock_gateway.py
frontend/: app.js  avatar.html  avatar.js  index.html
frontend/assets/: cortana_completa.glb
frontend/utils/: BufferGeometryUtils.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  stt.rs  tts.rs
tools/: analyze_glb.py  download_models.sh  export_cortana2.py  export_original_materials.py  export_sculpted_model.py  ollama_to_blendermcp.py  prepare_user_glb.py  setup_sculpt_scene.py
tools/blender-mcp/: start_blender_server.py
